// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests different variations of classes Renders LunchBlockComponent with a dr 1`] = `
Array [
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "justifyContent": "center",
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <Text
        classColor="Green"
        ellipsizeMode="middle"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#5da539",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "fontSize": 25,
              "fontWeight": "bold",
              "textAlign": "left",
            },
          ]
        }
      >
        Directed research
      </Text>
      <View
        flex={false}
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#808080",
                "paddingLeft": 5,
                "textAlign": "right",
              },
            ]
          }
        >
          10:55
           - 
          11:22 AM
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "justifyContent": "space-between",
            "marginTop": 5,
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#808080",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "textAlign": "left",
            },
          ]
        }
      >
        Dr. Test
      </Text>
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#808080",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "textAlign": "right",
            },
          ]
        }
      >
        Room 102
      </Text>
    </View>
  </View>,
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "justifyContent": "center",
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <Text
        ellipsizeMode="middle"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#444444",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "fontSize": 25,
              "fontWeight": "bold",
              "textAlign": "left",
            },
          ]
        }
      >
        Lunch
      </Text>
      <View
        flex={false}
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#808080",
                "paddingLeft": 5,
                "textAlign": "right",
              },
            ]
          }
        >
          11:25
           - 
          11:52 AM
        </Text>
      </View>
    </View>
  </View>,
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "justifyContent": "center",
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <Text
        classColor="Green"
        ellipsizeMode="middle"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#5da539",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "fontSize": 25,
              "fontWeight": "bold",
              "textAlign": "left",
            },
          ]
        }
      >
        Directed research
      </Text>
      <View
        flex={false}
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#808080",
                "paddingLeft": 5,
                "textAlign": "right",
              },
            ]
          }
        >
          11:55
           - 
          12:22 PM
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "justifyContent": "space-between",
            "marginTop": 5,
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#808080",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "textAlign": "left",
            },
          ]
        }
      >
        Dr. Test
      </Text>
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#808080",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "textAlign": "right",
            },
          ]
        }
      >
        Room 102
      </Text>
    </View>
  </View>,
]
`;

exports[`Tests different variations of classes Renders LunchBlockComponent with a free 1`] = `
Array [
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "justifyContent": "center",
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <Text
        classColor="Purple"
        ellipsizeMode="middle"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#8848ad",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "fontSize": 25,
              "fontWeight": "bold",
              "textAlign": "left",
            },
          ]
        }
      >
        Free
      </Text>
      <View
        flex={true}
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexBasis": 0,
              "flexDirection": "row",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "flex-end",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#808080",
                "paddingLeft": 5,
                "textAlign": "right",
              },
            ]
          }
        >
          10:55
           - 
          11:22 AM
        </Text>
      </View>
    </View>
  </View>,
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "justifyContent": "center",
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <Text
        ellipsizeMode="middle"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#444444",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "fontSize": 25,
              "fontWeight": "bold",
              "textAlign": "left",
            },
          ]
        }
      >
        Lunch
      </Text>
      <View
        flex={false}
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#808080",
                "paddingLeft": 5,
                "textAlign": "right",
              },
            ]
          }
        >
          11:25
           - 
          11:52 AM
        </Text>
      </View>
    </View>
  </View>,
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "justifyContent": "center",
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <Text
        classColor="Purple"
        ellipsizeMode="middle"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#8848ad",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "fontSize": 25,
              "fontWeight": "bold",
              "textAlign": "left",
            },
          ]
        }
      >
        Free
      </Text>
      <View
        flex={true}
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexBasis": 0,
              "flexDirection": "row",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "flex-end",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#808080",
                "paddingLeft": 5,
                "textAlign": "right",
              },
            ]
          }
        >
          11:55
           - 
          12:22 PM
        </Text>
      </View>
    </View>
  </View>,
]
`;

exports[`Tests different variations of classes Renders LunchBlockComponent with a major 1`] = `
Array [
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "justifyContent": "center",
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <Text
        ellipsizeMode="middle"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#444444",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "fontSize": 25,
              "fontWeight": "bold",
              "textAlign": "left",
            },
          ]
        }
      >
        Lunch
      </Text>
      <View
        flex={false}
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#808080",
                "paddingLeft": 5,
                "textAlign": "right",
              },
            ]
          }
        >
          10:55
           - 
          11:22 AM
        </Text>
      </View>
    </View>
  </View>,
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "justifyContent": "center",
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <Text
        classColor="Red"
        ellipsizeMode="middle"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#c93a3a",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "fontSize": 25,
              "fontWeight": "bold",
              "textAlign": "left",
            },
          ]
        }
      >
        Test Major
      </Text>
      <View
        flex={false}
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#808080",
                "paddingLeft": 5,
                "textAlign": "right",
              },
            ]
          }
        >
          11:25
           - 
          12:22 PM
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "justifyContent": "space-between",
            "marginTop": 5,
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#808080",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "textAlign": "left",
            },
          ]
        }
      >
        Mr. Test
      </Text>
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#808080",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "textAlign": "right",
            },
          ]
        }
      >
        Fitness center
      </Text>
    </View>
  </View>,
]
`;

exports[`Tests different variations of classes Renders LunchBlockComponent with a minor 1`] = `
Array [
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "justifyContent": "center",
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <Text
        classColor="Yellow"
        ellipsizeMode="middle"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#ddc923",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "fontSize": 25,
              "fontWeight": "bold",
              "textAlign": "left",
            },
          ]
        }
      >
        Test minor
      </Text>
      <View
        flex={false}
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#808080",
                "paddingLeft": 5,
                "textAlign": "right",
              },
            ]
          }
        >
          10:55
           - 
          11:52 AM
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "justifyContent": "space-between",
            "marginTop": 5,
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#808080",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "textAlign": "left",
            },
          ]
        }
      >
        Mrs. Test
      </Text>
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#808080",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "textAlign": "right",
            },
          ]
        }
      >
        Room 334
      </Text>
    </View>
  </View>,
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "justifyContent": "center",
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <Text
        ellipsizeMode="middle"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#444444",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "fontSize": 25,
              "fontWeight": "bold",
              "textAlign": "left",
            },
          ]
        }
      >
        Lunch
      </Text>
      <View
        flex={false}
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#808080",
                "paddingLeft": 5,
                "textAlign": "right",
              },
            ]
          }
        >
          11:55
           - 
          12:22 PM
        </Text>
      </View>
    </View>
  </View>,
]
`;
